--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -8,5 +8,6 @@
 
 install(FILES
     pulsed_power_daq_picoscope_4000a_source.block.yml
-    pulsed_power_daq_power_calc_cc.block.yml DESTINATION share/gnuradio/grc/blocks
+    pulsed_power_daq_power_calc_cc.block.yml
+    pulsed_power_daq_power_calc_ff.block.yml DESTINATION share/gnuradio/grc/blocks
 )
