--- a/include/pulsed_power_daq/CMakeLists.txt
+++ b/include/pulsed_power_daq/CMakeLists.txt
@@ -23,5 +23,6 @@ install(FILES
     /opt/picoscope/include/libps4000a/ps4000aApi.h
     /opt/picoscope/include/libps4000a/PicoStatus.h
     picoscope_4000a_source.h
-    power_calc_cc.h DESTINATION include/pulsed_power_daq
+    power_calc_cc.h
+    power_calc_ff.h DESTINATION include/pulsed_power_daq
 )
