--- a/python/bindings/CMakeLists.txt
+++ b/python/bindings/CMakeLists.txt
@@ -30,7 +30,8 @@ include(GrPybind)
 
 list(APPEND pulsed_power_daq_python_files
     picoscope_4000a_source_python.cc
-    power_calc_cc_python.cc python_bindings.cc)
+    power_calc_cc_python.cc
+    power_calc_ff_python.cc python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(pulsed_power_daq
    ../..
