--- a/python/bindings/CMakeLists.txt
+++ b/python/bindings/CMakeLists.txt
@@ -29,10 +29,9 @@ include(GrPybind)
 ########################################################################
 list(APPEND pulsed_power_daq_python_files
     picoscope_4000a_source_python.cc
-    power_calc_cc_python.cc
     power_calc_ff_python.cc
     mains_frequency_calc_python.cc
-    python_bindings.cc)
+    power_calc_cc_python.cc python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(pulsed_power_daq
    ../..
