--- a/grc/pulsed_power_daq_picoscope_4000a_source.block.yml
+++ b/grc/pulsed_power_daq_picoscope_4000a_source.block.yml
@@ -108,7 +108,7 @@ parameters:
     label: Coupling A
     category: Analog Config
     dtype: int
-    default: '0'
+    default: '1'
     options: ['0', '1']
     option_labels: [DC_1M, AC_1M]
     hide: ${ ('part' if enable_ai_a else 'all') }
@@ -128,7 +128,7 @@ parameters:
     label: Range B
     category: Analog Config
     dtype: float
-    default: '5'
+    default: '1'
     options: ['0.01', '0.02', '0.05', '0.1', '0.2', '0.5', '1', '2', '5', '10', '20',
         '50', '100', '200']
     option_labels: [10 mV, 20 mV, 50 mV, 100 mV, 200 mV, 500 mV, 1 V, 2 V, 5 V, 10
@@ -146,7 +146,7 @@ parameters:
     label: Coupling B
     category: Analog Config
     dtype: int
-    default: '0'
+    default: '1'
     options: ['0', '1']
     option_labels: [DC_1M, AC_1M]
     hide: ${ ('part' if enable_ai_b else 'all') }
@@ -459,31 +459,31 @@ templates:
     make: "pulsed_power_daq.picoscope_4000a_source(${serial_number}, True)"
     callbacks:
 
-    - set_aichan_a("A", true, 5.0, 1)
-    - set_aichan_b("B", true, 1.0, 1)
+    # - set_aichan_a("A", true, 5.0, 1)
+    # - set_aichan_b("B", true, 1.0, 1)
    
     - set_samp_rate(${samp_rate})
     - set_samples(${pre_samples}, ${post_samples})
     
-    - set_nr_buffers(${nr_buffers})
-    - set_driver_buffer_size(${driver_buff_size})
-    - set_streaming(${poll_rate})
-
-    # - set_trigger_once(${trigger_once})
-    # - set_downsampling(${downsampling_mode}, ${downsampling_factor})
-    # - set_aichan_trigger(${trigger_source}, ${trigger_direction}, ${trigger_threshold})
-    # - set_aichan_a(${enable_ai_a}, ${range_ai_a}, ${coupling_ai_a}, ${offset_ai_a})
-    # - set_aichan_b(${enable_ai_b}, ${range_ai_b}, ${coupling_ai_b}, ${offset_ai_b})
-    # - set_aichan_c(${enable_ai_c}, ${range_ai_c}, ${coupling_ai_c}, ${offset_ai_c})
-    # - set_aichan_d(${enable_ai_d}, ${range_ai_d}, ${coupling_ai_d}, ${offset_ai_d})
-    # - set_aichan_e(${enable_ai_e}, ${range_ai_e}, ${coupling_ai_e}, ${offset_ai_e})
-    # - set_aichan_f(${enable_ai_f}, ${range_ai_f}, ${coupling_ai_f}, ${offset_ai_f})
-    # - set_aichan_g(${enable_ai_g}, ${range_ai_g}, ${coupling_ai_g}, ${offset_ai_g})
-    # - set_aichan_h(${enable_ai_h}, ${range_ai_h}, ${coupling_ai_h}, ${offset_ai_h})
-    # - set_rapid_block(${nr_waveforms})
     # - set_nr_buffers(${nr_buffers})
-
-    # - set_streaming(${poll_rate})
     # - set_driver_buffer_size(${driver_buff_size})
+    # - set_streaming(${poll_rate})
+
+    - set_trigger_once(${trigger_once})
+    - set_downsampling(${downsampling_mode}, ${downsampling_factor})
+    - set_aichan_trigger(${trigger_source}, ${trigger_direction}, ${trigger_threshold})
+    - set_aichan_a(${enable_ai_a}, ${range_ai_a}, ${coupling_ai_a}, ${offset_ai_a})
+    - set_aichan_b(${enable_ai_b}, ${range_ai_b}, ${coupling_ai_b}, ${offset_ai_b})
+    - set_aichan_c(${enable_ai_c}, ${range_ai_c}, ${coupling_ai_c}, ${offset_ai_c})
+    - set_aichan_d(${enable_ai_d}, ${range_ai_d}, ${coupling_ai_d}, ${offset_ai_d})
+    - set_aichan_e(${enable_ai_e}, ${range_ai_e}, ${coupling_ai_e}, ${offset_ai_e})
+    - set_aichan_f(${enable_ai_f}, ${range_ai_f}, ${coupling_ai_f}, ${offset_ai_f})
+    - set_aichan_g(${enable_ai_g}, ${range_ai_g}, ${coupling_ai_g}, ${offset_ai_g})
+    - set_aichan_h(${enable_ai_h}, ${range_ai_h}, ${coupling_ai_h}, ${offset_ai_h})
+    - set_rapid_block(${nr_waveforms})
+    
+    - set_nr_buffers(${nr_buffers})
+    - set_streaming(${poll_rate})
+    - set_driver_buffer_size(${driver_buff_size})
 
 file_format: 1
