--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -9,5 +9,6 @@ install(FILES
     pulsed_power_daq_picoscope_4000a_source.block.yml
     pulsed_power_daq_power_calc_ff.block.yml
     pulsed_power_daq_mains_frequency_calc.block.yml
-    pulsed_power_daq_power_calc_cc.block.yml DESTINATION share/gnuradio/grc/blocks
+    pulsed_power_daq_power_calc_cc.block.yml
+    pulsed_power_daq_power_calc_ff_prepper.block.yml DESTINATION share/gnuradio/grc/blocks
 )
